r121 - october, 12, 2009
    * install : actions > _checkConfiguration() > We can install Piwam even if
      memory_limit is not greater or equal to 128M
    * install : actions > _checkConfiguration() > Apache modules are not tested
      if apache_get_modules function is not available
    * install : templates > error partials have been enhanced to be more 
      readable
      

r120 - october, 12, 2009
    * update : actions > _checkSQLFilesSince() > updates are performed within
      SQL transactions
    * DBTools.class.php : executeSQLFile() > we check that query is not empty
      before launching it
            

r119 - october, 8, 2009
    * Piwam 1.1.1
    

r118 - october, 8, 2009
    * install : actions > we check if Piwam is already installed
    * install : templates > indexError.php > new file


r117 - october, 8, 2009
    * /doc/UPDATE-FR : new file
    * /data/updates/1.1-to-1.1.1 : new folder
    * /data/updates/1.1-to-1.1.1/r117.sql : new file
    * /config/databases.yml : added to svn:ignore
    * /apps/front/config/settings.yml : Google Map Key has been removed (put
      into the database)
    * layout.php : new menu entry (install and update)


r116 - october, 8, 2009
    * README-FR has been updated
    * TROUBLESHOOTING-FR has been updated
    * mailing module has been removed because empty
    * databases.yml : fixed wrong encoding value for 'all'
    * Association : actions > executeMailing() > missing attributes 
      $associationId has been added when calling 'Configurator::get()'
    * /doc/piwam-install.sql : collation and charset for piwam_data has been
      set explicitely


r115 - october, 6, 2009
    * Edited 'installerPiwam' wiki page through web user interface.


r114 - october, 6, 2009
    * Edited 'installerPiwam' wiki page through web user interface.


r113 - october, 1, 2009
    * Piwam 1.1


r112 - september, 16, 2009
    * update : actions > executePerform > if it works we clear the cache